syntax = "proto3";

message ClientError
{
  uint32 error_no = 1;
  repeated string error_param = 2;
}

message RpcNoResponse
{
}

message ConnetionParam
{
  string host_name = 1;
  uint32 port = 2;
  string user_name = 3;
  string pass_word = 4;
  string database_name = 5;
}

message ConnetionParamJsonFormat
{
  repeated ConnetionParam data = 1;
}

message GameConfig
{
  uint32 port = 1;
}